# fotmob-mcp

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
.vibe/: intent.txt
docs/: fotmob-api.md
examples/: hermes-mcp.json
fotmob_mcp/: client.py  server.py
tests/: test_client.py  test_server.py
