[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "fotmob-mcp"
version = "0.1.0"
description = "Standalone MCP server for verified FotMob JSON routes"
requires-python = ">=3.11"
dependencies = [
  "mcp>=1.28.1",
  "requests>=2.32.0",
]

[project.scripts]
fotmob-mcp = "fotmob_mcp.server:main"

[tool.setuptools.packages.find]
include = ["fotmob_mcp*"]
